crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('2000-03-15 12:14:03 GMT-2');"
---
InsertStmt@0..65
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..63
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..63
      AConst@36..63
        Sconst@36..63 "'2000-03-15 12:14:03  ..."
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

