crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set datestyle to ymd;
---
VariableSetStmt@0..21
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..13 "datestyle"
  Whitespace@13..14 " "
  To@14..16 "to"
  Whitespace@16..17 " "
  AConst@17..20
    Ident@17..20 "ymd"
  Ascii59@20..21 ";"

